--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,15 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorSecondary"
-    tools:context=".LoginActivity">
-
-
-
+    tools:context=".RegisterActivity">
 
     <LinearLayout
         android:id="@+id/ll_appHeader"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="100dp"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/colorPrimary"
         android:gravity="center"
@@ -21,8 +18,8 @@
 
         <ImageView
             android:id="@+id/iv_appLogo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/app_logo" />
 
         <TextView
@@ -32,7 +29,7 @@
             android:fontFamily="@font/passion_one"
             android:text="@string/app_name"
             android:textColor="@color/colorTextDark"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:gravity="center"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,14 +41,14 @@
         android:layout_height="wrap_content"
         android:background="@color/colorSecondaryDark"
         android:gravity="center"
-        android:padding="10dp"
-        android:text="LOGIN"
+        android:padding="5dp"
+        android:text="REGISTER"
         android:textSize="20sp"
         android:textColor="@color/colorTextLight"
         app:layout_constraintTop_toBottomOf="@+id/ll_appHeader" />
 
     <LinearLayout
-        android:id="@+id/ll_loginForm"
+        android:id="@+id/ll_registerForm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -68,10 +65,43 @@
             android:hint="Email"
             android:background="@drawable/et_background"
             android:textColorHint="@color/colorSecondaryDark"
-            android:layout_margin="10dp"
-            android:padding="7dp"
-            android:elevation="2dp"
-            android:translationZ="2dp" />
+            android:layout_margin="8dp"
+            android:padding="5dp"
+            android:elevation="3dp"
+            android:translationZ="3dp" />
+        <EditText
+            android:id="@+id/et_firstName"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:hint="First Name"
+            android:background="@drawable/et_background"
+            android:textColorHint="@color/colorSecondaryDark"
+            android:layout_margin="8dp"
+            android:padding="5dp"
+            android:elevation="3dp"
+            android:translationZ="3dp" />
+        <EditText
+            android:id="@+id/et_lastName"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:hint="Last Name"
+            android:background="@drawable/et_background"
+            android:textColorHint="@color/colorSecondaryDark"
+            android:layout_margin="8dp"
+            android:padding="5dp"
+            android:elevation="3dp"
+            android:translationZ="3dp" />
+        <EditText
+            android:id="@+id/et_contact"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:hint="Contact"
+            android:background="@drawable/et_background"
+            android:textColorHint="@color/colorSecondaryDark"
+            android:layout_margin="8dp"
+            android:padding="5dp"
+            android:elevation="3dp"
+            android:translationZ="3dp" />
         <EditText
             android:id="@+id/et_password"
             android:layout_width="300dp"
@@ -79,38 +109,40 @@
             android:hint="Password"
             android:background="@drawable/et_background"
             android:textColorHint="@color/colorSecondaryDark"
-            android:layout_margin="10dp"
-            android:padding="7dp"
-            android:elevation="2dp"
-            android:translationZ="2dp" />
+            android:layout_margin="8dp"
+            android:padding="5dp"
+            android:elevation="3dp"
+            android:translationZ="3dp" />
+        <EditText
+            android:id="@+id/et_confirmPassword"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:hint=" Confirm Password"
+            android:background="@drawable/et_background"
+            android:textColorHint="@color/colorSecondaryDark"
+            android:layout_margin="8dp"
+            android:padding="5dp"
+            android:elevation="3dp"
+            android:translationZ="3dp" />
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="login"
+            android:text="register"
             android:textColor="@color/colorTextLight"
             android:background="@drawable/btn_background"
             android:layout_margin="10dp"
-            android:elevation="8dp"
-            android:translationZ="8dp" />
+            android:elevation="6dp"
+            android:translationZ="6dp" />
         <TextView
-            android:id="@+id/tv_forgotPassword"
+            android:id="@+id/tv_loginLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Forgot Password?"
-            android:textColor="@color/colorTextDark"
-            android:layout_margin="2dp" />
-        <TextView
-            android:id="@+id/tv_registerLink"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Not a Registered User? Click Here"
+            android:text="Registered User? Click Here to Login"
             android:textColor="@color/colorTextDark"
             android:layout_margin="2dp"
-            android:onClick="registerRedirect" />
+            android:onClick="loginRedirect" />
 
     </LinearLayout>
-
-
 
 </android.support.constraint.ConstraintLayout>
