--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,25 +12,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_appName"
+        <LinearLayout
+            android:id="@+id/ll_appHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             android:background="@color/colorPrimary"
-            android:text="@string/app_name"
-            android:fontFamily="@font/passion_one"
-            android:textColor="@color/colorTextDark"
-            android:textSize="30sp"
-            android:gravity="center"
+            android:orientation="horizontal"
             android:padding="10dp"
+            android:weightSum="2"
             android:elevation="4dp"
-            android:translationZ="4dp"/>
+            android:translationZ="4dp">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="0.3"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="0dp"
+                android:src="@drawable/ic_navbar" />
+
+            <TextView
+                android:id="@+id/tv_appName"
+                android:layout_width="0dp"
+                android:layout_weight="1.7"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:fontFamily="@font/passion_one"
+                android:textColor="@color/colorTextDark"
+                android:textSize="30sp"
+                android:gravity="center"
+                android:paddingRight="30dp" />
+
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tv_appName"
+            app:layout_constraintTop_toBottomOf="@+id/ll_appHeader"
             android:background="@color/colorSecondary"
             android:id="@+id/rv_vehiclesList">
         </android.support.v7.widget.RecyclerView>
@@ -47,12 +66,13 @@
 
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/iv_sort"
                 android:layout_width="0dp"
                 android:layout_height="25dp"
                 android:layout_weight="0.4"
                 android:paddingTop="2dp"
-                app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
+                android:paddingLeft="30dp"
+                app:srcCompat="@drawable/ic_sort" />
 
             <TextView
                 android:layout_width="0dp"
@@ -69,14 +89,23 @@
                 android:layout_height="match_parent"
                 android:background="@color/colorTextLight"/>
 
+            <ImageView
+                android:id="@+id/iv_filter"
+                android:layout_width="0dp"
+                android:layout_height="25dp"
+                android:layout_weight="0.4"
+                android:paddingTop="2dp"
+                android:paddingLeft="30dp"
+                app:srcCompat="@drawable/ic_filter" />
+
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.995"
+                android:layout_weight="0.595"
                 android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:text="Filter"
                 android:textColor="@color/colorTextLight"
-                android:textSize="20sp"
-                android:gravity="center"/>
+                android:textSize="20sp"/>
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
@@ -87,6 +116,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_view"/>
+        app:menu="@menu/drawer_view"
+        app:headerLayout="@layout/nav_header"/>
 
 </android.support.v4.widget.DrawerLayout>
