--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
             android:id="@+id/iv_appLogo"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/app_logo" />
+            android:src="@drawable/ic_applogo" />
 
         <TextView
             android:id="@+id/tv_appName"
