--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorTextDark">#000000</color>
     <color name="colorFieldsLight">#FFFFFF</color>
     <color name="colorFieldsDark">#000000</color>
+    <color name="colorDanger">#b71c1c</color>
 </resources>
