--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,109 +6,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    tools:openDrawer="start">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/ll_appHeader"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
-            android:orientation="horizontal"
-            android:padding="10dp"
-            android:weightSum="2"
             android:elevation="4dp"
-            android:translationZ="4dp">
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_weight="0.3"
-                android:layout_height="20dp"
-                android:layout_gravity="center_vertical"
-                android:paddingLeft="0dp"
-                android:src="@drawable/ic_navbar" />
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            android:translationZ="4dp"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
 
             <TextView
-                android:id="@+id/tv_appName"
-                android:layout_width="0dp"
-                android:layout_weight="1.7"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
                 android:fontFamily="@font/passion_one"
+                android:text="@string/app_name"
                 android:textColor="@color/colorTextDark"
                 android:textSize="30sp"
-                android:gravity="center"
-                android:paddingRight="30dp" />
+                android:layout_gravity="center"
+                android:id="@+id/tv_toolbarTitle" />
 
-        </LinearLayout>
+        </android.support.v7.widget.Toolbar>
 
-        <android.support.v7.widget.RecyclerView
+        <FrameLayout
+            android:id="@+id/fl_fragmentContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/ll_appHeader"
-            android:background="@color/colorSecondary"
-            android:id="@+id/rv_vehiclesList">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="15dp"
-            android:weightSum="2"
-            android:background="@color/colorSecondaryDark"
-            android:elevation="4dp"
-            android:translationZ="4dp">
+        </FrameLayout>
 
-
-            <ImageView
-                android:id="@+id/iv_sort"
-                android:layout_width="0dp"
-                android:layout_height="25dp"
-                android:layout_weight="0.4"
-                android:paddingTop="2dp"
-                android:paddingLeft="30dp"
-                app:srcCompat="@drawable/ic_sort" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="0.595"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="Sort"
-                android:textColor="@color/colorTextLight"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="0.01"
-                android:layout_height="match_parent"
-                android:background="@color/colorTextLight"/>
-
-            <ImageView
-                android:id="@+id/iv_filter"
-                android:layout_width="0dp"
-                android:layout_height="25dp"
-                android:layout_weight="0.4"
-                android:paddingTop="2dp"
-                android:paddingLeft="30dp"
-                app:srcCompat="@drawable/ic_filter" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="0.595"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="Filter"
-                android:textColor="@color/colorTextLight"
-                android:textSize="20sp"/>
-        </LinearLayout>
-
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -116,7 +51,30 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_view"
-        app:headerLayout="@layout/nav_header"/>
+        android:background="@color/colorSecondary"
+        app:itemIconTint="@color/drawer_item"
+        app:itemTextColor="@color/drawer_item"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/menu_navigation_drawer">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/btn_danger_background"
+                android:elevation="6dp"
+                android:text="Logout"
+                android:textColor="@color/colorTextLight"
+                android:translationZ="4dp" />
+        </LinearLayout>
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
