--> Basic Navigation Drawer Completed --> Designing to be done

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Email"
-            android:background="@drawable/et_background"
+            android:background="@drawable/background_et"
             android:textColorHint="@color/colorSecondaryDark"
             android:layout_margin="10dp"
             android:padding="7dp"
@@ -77,7 +77,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Password"
-            android:background="@drawable/et_background"
+            android:background="@drawable/background_et"
             android:textColorHint="@color/colorSecondaryDark"
             android:layout_margin="10dp"
             android:padding="7dp"
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:text="login"
             android:textColor="@color/colorTextLight"
-            android:background="@drawable/btn_background"
+            android:background="@drawable/background_btn"
             android:layout_margin="10dp"
             android:elevation="8dp"
             android:translationZ="8dp" />
