--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -63,7 +63,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Email"
-            android:background="@drawable/et_background"
+            android:background="@drawable/background_et"
             android:textColorHint="@color/colorSecondaryDark"
             android:layout_margin="8dp"
             android:padding="5dp"
@@ -74,7 +74,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="First Name"
-            android:background="@drawable/et_background"
+            android:background="@drawable/background_et"
             android:textColorHint="@color/colorSecondaryDark"
             android:layout_margin="8dp"
             android:padding="5dp"
@@ -85,7 +85,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Last Name"
-            android:background="@drawable/et_background"
+            android:background="@drawable/background_et"
             android:textColorHint="@color/colorSecondaryDark"
             android:layout_margin="8dp"
             android:padding="5dp"
@@ -96,7 +96,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Contact"
-            android:background="@drawable/et_background"
+            android:background="@drawable/background_et"
             android:textColorHint="@color/colorSecondaryDark"
             android:layout_margin="8dp"
             android:padding="5dp"
@@ -107,7 +107,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Password"
-            android:background="@drawable/et_background"
+            android:background="@drawable/background_et"
             android:textColorHint="@color/colorSecondaryDark"
             android:layout_margin="8dp"
             android:padding="5dp"
@@ -118,7 +118,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint=" Confirm Password"
-            android:background="@drawable/et_background"
+            android:background="@drawable/background_et"
             android:textColorHint="@color/colorSecondaryDark"
             android:layout_margin="8dp"
             android:padding="5dp"
@@ -130,7 +130,7 @@
             android:layout_height="wrap_content"
             android:text="register"
             android:textColor="@color/colorTextLight"
-            android:background="@drawable/btn_background"
+            android:background="@drawable/background_btn"
             android:layout_margin="10dp"
             android:elevation="6dp"
             android:translationZ="6dp" />
