--- a/app/src/main/res/layout/fragment_vehicles_list.xml
+++ b/app/src/main/res/layout/fragment_vehicles_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fl_vehicles_list_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,9 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/colorPrimary"
-        app:itemIconTint="@color/drawer_item"
-        app:itemTextColor="@color/drawer_item"
-        app:menu="@menu/menu_bottomNavigation" />
+        android:background="@color/colorAccent"
+        android:elevation="6dp"
+        android:translationZ="6dp"
+        app:itemIconTint="@color/colorTextLight"
+        app:itemTextColor="@color/colorTextLight"
+        app:menu="@menu/menu_bottom_navigation" />
 
 </FrameLayout>
