--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
+
+    <item
+        android:id="@+id/item_bottomnav_sort"
+        android:icon="@drawable/ic_sort"
+        android:title="Sort" />
+    <item
+        android:id="@+id/item_bottomnav_filter"
+        android:icon="@drawable/ic_filter"
+        android:title="Filter" />
 
 </menu>
