--- a/app/src/main/res/layout/card_list_item.xml
+++ b/app/src/main/res/layout/card_list_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_vies"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="100dp"
         android:layout_margin="10dp"
+        android:translationZ="8dp"
         card_view:cardCornerRadius="4dp"
-        card_view:elevation="14dp">
+        card_view:elevation="8dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -17,13 +19,54 @@
 
             <ImageView
                 android:id="@+id/iv_card_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_margin="10dp"
+                tools:src="@drawable/ic_applogo" />
 
             <TextView
-                android:id="@+id/tv_card_name"
+                android:id="@+id/tv_card_vehicle_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/iv_card_image"
+                android:layout_toRightOf="@+id/iv_card_image"
+                android:paddingLeft="30dp"
+                android:text=""
+                android:textColor="@color/colorTextDark"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                tools:text="Honda Dio" />
+
+            <TextView
+                android:id="@+id/tv_card_locality"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_card_vehicle_name"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/iv_card_image"
+                android:layout_toRightOf="@+id/iv_card_image"
+                android:paddingLeft="30dp"
+                android:text=""
+                android:textColor="@color/colorTextDark"
+                android:textSize="15dp"
+                tools:text="Mapusa" />
+
+            <TextView
+                android:id="@+id/tv_card_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_card_locality"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/iv_card_image"
+                android:layout_toRightOf="@+id/iv_card_image"
+                android:paddingLeft="30dp"
+                android:text=""
+                android:textColor="@color/colorTextDark"
+                android:textSize="12dp"
+                tools:text="You Pay: 200 per/day" />
 
         </RelativeLayout>
 
