--- a/app/src/main/res/layout/fragment_vehicles_list.xml
+++ b/app/src/main/res/layout/fragment_vehicles_list.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fl_vehicles_list_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_vehicles_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorSecondary"></android.support.v7.widget.RecyclerView>
+        android:background="@color/colorSecondary"
+        tools:listitem="@android:layout/simple_list_item_checked"></android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
